# cmake_examples

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TutorialConfig.h  TutorialConfig.h.in
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
MathFunctions/: CMakeLists.txt  add.cpp
